--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   },
   "dependencies": {
     "nuxt": "^3.12.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
